# ethereum-consensus-types

./: .gitignore  Cargo.toml  README.md
ethereum-consensus-types/: Cargo.toml
ethereum-consensus-types/src/: beacon_block_header.rs  bls.rs  lib.rs  light_client.rs  primitives.rs  signing.rs  sync_committee.rs
ethereum-consensus-types/src/presets/: minimal.rs
ethereum-consensus-types/tests/: ssz_deserialization.rs
test-utils/: Cargo.toml
