[workspace]
members = [
    "test-utils",
    "ethereum-consensus-types",
]

resolver = "2"

[workspace.dependencies]
test-utils = { path = "./test-utils" }
ethereum-consensus-types = { path = "./ethereum-consensus-types" }


serde = "1.0.158"
serde_with = "3.3.0"
rstest = "0.18.2"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "f3bff52e9c43866f231ec40c8ab0e34125a8957f" }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "5f1ec833718efa07bbbff427ab28a1eeaa706164" }
blst = { version = "0.3.11", default-features = false, features = [ "portable", "no-threads" ] }
sha2 = { version = "0.10.8", default-features = false }
hex = { version = "0.4.3"}
