[package]
name = "ethereum-consensus-types"
authors = ["ChainSafe Systems"]
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:hex", "ssz_rs/serde"]

[dependencies]
ssz_rs = { workspace = true }
# cryptography = { workspace = true }
hex-literal = "0.4.1"
serde = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
blst = { version = "0.3.11", default-features = false, features = [
    "portable",
    "no-threads",
] }

[dev-dependencies]
serde = { workspace = true }
serde_with = "3.3.0"
rstest = "0.18.2"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "f3bff52e9c43866f231ec40c8ab0e34125a8957f" }
test-utils = { workspace = true }
